--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿cmake_minimum_required(VERSION 3.15)
 
+# Configure vcpkg toolchain
 set(VCPKG_DIR $ENV{VCPKG_DIR})
 set(CMAKE_TOOLCHAIN_FILE "${VCPKG_DIR}/scripts/buildsystems/vcpkg.cmake")
 
@@ -7,9 +8,9 @@ if(MSVC)
     set(VCPKG_CRT_LINKAGE static)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
+
 project("ScoreGen")
 
-# Set the C++ standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -18,52 +19,74 @@ find_package(Aubio CONFIG REQUIRED)
 find_package(portaudio CONFIG REQUIRED)
 find_package(SndFile REQUIRED)
 find_package(FFTW3 REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
-# Create the project's executable
-file(GLOB SOURCES "src/backend/*.cpp")
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
-
-# Link non-vcpkg dependencies
+# Setup non-vcpkg dependency for libmusicxml.
 set(LIBMUSICXML_ROOT "${CMAKE_SOURCE_DIR}/libs/libmusicxml")
 if(APPLE)
     set(LIBMUSICXML_STATIC_PATH "${LIBMUSICXML_ROOT}/lib/macos/libmusicxml2.a")
-    set(LIBMUSICXML_SHARED_PATH "${LIBMUSICXML_ROOT}/lib/macos/libmusicxml2.dylib")
-    set(LIBMUSICXML_DEST "$<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/libmusicxml.dylib")
 else()
     set(LIBMUSICXML_STATIC_PATH "${LIBMUSICXML_ROOT}/lib/win64/libmusicxml.lib")
     set(LIBMUSICXML_SHARED_PATH "${LIBMUSICXML_ROOT}/lib/win64/libmusicxml.dll")
-    set(LIBMUSICXML_DEST "$<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/libmusicxml.dll")
-endif()
+    set(LIBMUSICXML_DEST "$<TARGET_FILE_DIR:ScoreGen>/libmusicxml.dll")
 
+# Declare an imported target for libmusicxml.
 add_library(libmusicxml SHARED IMPORTED)
 set_target_properties(libmusicxml PROPERTIES
     IMPORTED_IMPLIB ${LIBMUSICXML_STATIC_PATH}
     IMPORTED_LOCATION ${LIBMUSICXML_SHARED_PATH}
 )
+endif()
 
-# Copy libmusicxml library to same directory as executable
-add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-    ${LIBMUSICXML_SHARED_PATH}
-    ${LIBMUSICXML_DEST}
-)
+# --------------------------------------------------
+# Create Core Library Target
+# --------------------------------------------------
+# Get backend source files.
+file(GLOB CORE_SOURCES "src/backend/*.cpp")
+list(REMOVE_ITEM CORE_SOURCES "${CMAKE_SOURCE_DIR}/src/backend/ScoreGen.cpp")
 
-# Include headers
-target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE 
-    ${CMAKE_HOME_DIRECTORY}/include
+# Create a static library containing the core functionality.
+add_library(ScoreGenLib STATIC ${CORE_SOURCES})
+
+# Include directories for the core library.
+target_include_directories(ScoreGenLib PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
     ${LIBMUSICXML_ROOT}/include
 )
 
-# Link imported targets
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE 
+# Link dependencies into the core library.
+target_link_libraries(ScoreGenLib PUBLIC 
     Aubio::aubio
     SndFile::sndfile
-    portaudio
-    libmusicxml
+    portaudio_static
+    ${LIBMUSICXML_STATIC_PATH}
     FFTW3::fftw3
 )
 
-# Additional platform-specific settings
-if (APPLE)
+# --------------------------------------------------
+# Create Main Application Executable
+# --------------------------------------------------
+add_executable(ScoreGen src/backend/ScoreGen.cpp)
+target_link_libraries(ScoreGen PRIVATE ScoreGenLib)
+
+# Platform-specific linking
+if(APPLE)
     target_link_libraries(ScoreGen PRIVATE "-framework CoreAudio" "-framework CoreFoundation")
 endif()
+
+# --------------------------------------------------
+# Create Test Executable for GTest
+# --------------------------------------------------
+# Get test source files.
+file(GLOB GTEST_SOURCES "test/gtest/*.cpp")
+
+# Create the test executable.
+add_executable(GTests ${GTEST_SOURCES})
+target_link_libraries(GTests PRIVATE 
+    ScoreGenLib
+    GTest::gtest_main
+)
+
+# Use CTest.
+# include(GoogleTest)
+# gtest_discover_tests(GTests)
